// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageIndicator should have 2nd item as active page 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PageIndicator
    activePage={1}
    pages={
      Array [
        1,
        2,
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <View
          style={
            Array [
              Object {
                "borderRadius": 5,
                "height": 6,
                "marginHorizontal": 4,
                "width": 6,
              },
              Object {
                "backgroundColor": "rgba(251, 207, 39, .4)",
              },
            ]
          }
        />,
        <View
          style={
            Array [
              Object {
                "borderRadius": 5,
                "height": 6,
                "marginHorizontal": 4,
                "width": 6,
              },
              Object {
                "backgroundColor": "rgb(251, 207, 39)",
              },
            ]
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "class",
        "props": Object {
          "style": Array [
            Object {
              "borderRadius": 5,
              "height": 6,
              "marginHorizontal": 4,
              "width": 6,
            },
            Object {
              "backgroundColor": "rgba(251, 207, 39, .4)",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "style": Array [
            Object {
              "borderRadius": 5,
              "height": 6,
              "marginHorizontal": 4,
              "width": 6,
            },
            Object {
              "backgroundColor": "rgb(251, 207, 39)",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            style={
              Array [
                Object {
                  "borderRadius": 5,
                  "height": 6,
                  "marginHorizontal": 4,
                  "width": 6,
                },
                Object {
                  "backgroundColor": "rgba(251, 207, 39, .4)",
                },
              ]
            }
          />,
          <View
            style={
              Array [
                Object {
                  "borderRadius": 5,
                  "height": 6,
                  "marginHorizontal": 4,
                  "width": 6,
                },
                Object {
                  "backgroundColor": "rgb(251, 207, 39)",
                },
              ]
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "class",
          "props": Object {
            "style": Array [
              Object {
                "borderRadius": 5,
                "height": 6,
                "marginHorizontal": 4,
                "width": 6,
              },
              Object {
                "backgroundColor": "rgba(251, 207, 39, .4)",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "style": Array [
              Object {
                "borderRadius": 5,
                "height": 6,
                "marginHorizontal": 4,
                "width": 6,
              },
              Object {
                "backgroundColor": "rgb(251, 207, 39)",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`PageIndicator should not render anything 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PageIndicator
    activePage={0}
    pages={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [],
    },
    "ref": null,
    "rendered": Array [],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [],
      },
      "ref": null,
      "rendered": Array [],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`PageIndicator should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PageIndicator
    activePage={0}
    pages={
      Array [
        1,
        2,
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <View
          style={
            Array [
              Object {
                "borderRadius": 5,
                "height": 6,
                "marginHorizontal": 4,
                "width": 6,
              },
              Object {
                "backgroundColor": "rgb(251, 207, 39)",
              },
            ]
          }
        />,
        <View
          style={
            Array [
              Object {
                "borderRadius": 5,
                "height": 6,
                "marginHorizontal": 4,
                "width": 6,
              },
              Object {
                "backgroundColor": "rgba(251, 207, 39, .4)",
              },
            ]
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "0",
        "nodeType": "class",
        "props": Object {
          "style": Array [
            Object {
              "borderRadius": 5,
              "height": 6,
              "marginHorizontal": 4,
              "width": 6,
            },
            Object {
              "backgroundColor": "rgb(251, 207, 39)",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "style": Array [
            Object {
              "borderRadius": 5,
              "height": 6,
              "marginHorizontal": 4,
              "width": 6,
            },
            Object {
              "backgroundColor": "rgba(251, 207, 39, .4)",
            },
          ],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <View
            style={
              Array [
                Object {
                  "borderRadius": 5,
                  "height": 6,
                  "marginHorizontal": 4,
                  "width": 6,
                },
                Object {
                  "backgroundColor": "rgb(251, 207, 39)",
                },
              ]
            }
          />,
          <View
            style={
              Array [
                Object {
                  "borderRadius": 5,
                  "height": 6,
                  "marginHorizontal": 4,
                  "width": 6,
                },
                Object {
                  "backgroundColor": "rgba(251, 207, 39, .4)",
                },
              ]
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "0",
          "nodeType": "class",
          "props": Object {
            "style": Array [
              Object {
                "borderRadius": 5,
                "height": 6,
                "marginHorizontal": 4,
                "width": 6,
              },
              Object {
                "backgroundColor": "rgb(251, 207, 39)",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "style": Array [
              Object {
                "borderRadius": 5,
                "height": 6,
                "marginHorizontal": 4,
                "width": 6,
              },
              Object {
                "backgroundColor": "rgba(251, 207, 39, .4)",
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
